Fix alignment center of campaigns page

--- a/src/app/campaigns/campaigns.component.css
+++ b/src/app/campaigns/campaigns.component.css
@@ -6,7 +6,7 @@ body{
 
 .container {
   max-width: 960px;
-  padding: 64px 32px;
+  padding: 30px 32px;
 }
 
 #horizontal-list{
